src/snapshots/min_2__tests__tokens__assignment.snap
---
source: src/tests.rs
expression: "&r.tokens"
---
Tokens {
    index: RefCell {
        value: 55,
    },
    tokens: [
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 0,
                    line: 0,
                },
            },
        ),
        IMPORT(
            Token {
                raw: "import",
                position: Position {
                    column: 0,
                    line: 1,
                },
            },
        ),
        COL(
            Token {
                raw: ":",
                position: Position {
                    column: 6,
                    line: 1,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 7,
                    line: 1,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 8,
                    line: 1,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 0,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 1,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 2,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 3,
                    line: 2,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/util`",
                position: Position {
                    column: 4,
                    line: 2,
                },
            },
        ),
        CBRACKETOPEN(
            Token {
                raw: "{",
                position: Position {
                    column: 15,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 16,
                    line: 2,
                },
            },
        ),
        IDENT(
            Token {
                raw: "pipe",
                position: Position {
                    column: 17,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 21,
                    line: 2,
                },
            },
        ),
        CBRACKETCLOSE(
            Token {
                raw: "}",
                position: Position {
                    column: 22,
                    line: 2,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 23,
                    line: 2,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 24,
                    line: 2,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 0,
                    line: 3,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 1,
                    line: 3,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 2,
                    line: 3,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 3,
                    line: 3,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/math`",
                position: Position {
                    column: 4,
                    line: 3,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 15,
                    line: 3,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 16,
                    line: 3,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 0,
                    line: 4,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 0,
                    line: 5,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 0,
                    line: 6,
                },
            },
        ),
        MUT(
            Token {
                raw: "mut",
                position: Position {
                    column: 0,
                    line: 7,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 3,
                    line: 7,
                },
            },
        ),
        IDENT(
            Token {
                raw: "val",
                position: Position {
                    column: 4,
                    line: 7,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 7,
                    line: 7,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 8,
                    line: 7,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 9,
                    line: 7,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "0",
                position: Position {
                    column: 10,
                    line: 7,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 11,
                    line: 7,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 12,
                    line: 7,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 0,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "setVal",
                position: Position {
                    column: 0,
                    line: 9,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 6,
                    line: 9,
                },
            },
        ),
        IDENT(
            Token {
                raw: "v",
                position: Position {
                    column: 7,
                    line: 9,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 8,
                    line: 9,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 9,
                    line: 9,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 10,
                    line: 9,
                },
            },
        ),
        NEWLINE(
            Token {
                raw: "\n",
                position: Position {
                    column: 11,
                    line: 9,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 0,
                    line: 10,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 1,
                    line: 10,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 2,
                    line: 10,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 3,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "v",
                position: Position {
                    column: 4,
                    line: 10,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 5,
                    line: 10,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 6,
                    line: 10,
                },
            },
        ),
        MORETHAN(
            Token {
                raw: ">",
                position: Position {
                    column: 7,
                    line: 10,
                },
            },
        ),
        SPACE(
            Token {
                raw: " ",
                position: Position {
                    column: 8,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "val",
                position: Position {
                    column: 9,
                    line: 10,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 12,
                    line: 10,
                },
            },
        ),
    ],
}
