src/snapshots/min_2__tests__tokens__class.snap
---
source: src/tests.rs
expression: "&r.tokens"
---
Tokens {
    index: RefCell {
        value: 89,
    },
    tokens: [
        IMPORT(
            Token {
                raw: "import",
                position: Position {
                    column: 0,
                    line: 1,
                },
            },
        ),
        COL(
            Token {
                raw: ":",
                position: Position {
                    column: 6,
                    line: 1,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/util`",
                position: Position {
                    column: 4,
                    line: 2,
                },
            },
        ),
        CBRACKETOPEN(
            Token {
                raw: "{",
                position: Position {
                    column: 15,
                    line: 2,
                },
            },
        ),
        IDENT(
            Token {
                raw: "pipe",
                position: Position {
                    column: 17,
                    line: 2,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 21,
                    line: 2,
                },
            },
        ),
        IDENT(
            Token {
                raw: "match",
                position: Position {
                    column: 23,
                    line: 2,
                },
            },
        ),
        CBRACKETCLOSE(
            Token {
                raw: "}",
                position: Position {
                    column: 29,
                    line: 2,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 30,
                    line: 2,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/math`",
                position: Position {
                    column: 4,
                    line: 3,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 15,
                    line: 3,
                },
            },
        ),
        IDENT(
            Token {
                raw: "PI",
                position: Position {
                    column: 0,
                    line: 4,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 3,
                    line: 4,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 5,
                    line: 4,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 7,
                    line: 4,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 9,
                    line: 4,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 11,
                    line: 4,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "0",
                position: Position {
                    column: 13,
                    line: 4,
                },
            },
        ),
        DOT(
            Token {
                raw: ".",
                position: Position {
                    column: 14,
                    line: 4,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "012",
                position: Position {
                    column: 15,
                    line: 4,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 18,
                    line: 4,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 6,
                },
            },
        ),
        MUT(
            Token {
                raw: "mut",
                position: Position {
                    column: 4,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "Pi",
                position: Position {
                    column: 8,
                    line: 6,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 11,
                    line: 6,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "123",
                position: Position {
                    column: 13,
                    line: 6,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 16,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "fn",
                position: Position {
                    column: 0,
                    line: 8,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 2,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 3,
                    line: 8,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 4,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 6,
                    line: 8,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 7,
                    line: 8,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 9,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 11,
                    line: 8,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 13,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 15,
                    line: 8,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 16,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "one",
                position: Position {
                    column: 0,
                    line: 10,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 3,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 4,
                    line: 10,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 5,
                    line: 10,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 7,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 9,
                    line: 10,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 11,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 13,
                    line: 10,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 15,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "c",
                position: Position {
                    column: 17,
                    line: 10,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 18,
                    line: 10,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 12,
                },
            },
        ),
        IDENT(
            Token {
                raw: "zero",
                position: Position {
                    column: 4,
                    line: 12,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 8,
                    line: 12,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 9,
                    line: 12,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 11,
                    line: 12,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#(()=>{throw new Error(\"hello 2\")})()#",
                position: Position {
                    column: 13,
                    line: 12,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 51,
                    line: 12,
                },
            },
        ),
        IDENT(
            Token {
                raw: "multiline",
                position: Position {
                    column: 0,
                    line: 14,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 9,
                    line: 14,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 10,
                    line: 14,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 12,
                    line: 14,
                },
            },
        ),
        IDENT(
            Token {
                raw: "console",
                position: Position {
                    column: 14,
                    line: 14,
                },
            },
        ),
        DOT(
            Token {
                raw: ".",
                position: Position {
                    column: 21,
                    line: 14,
                },
            },
        ),
        IDENT(
            Token {
                raw: "log",
                position: Position {
                    column: 22,
                    line: 14,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 25,
                    line: 14,
                },
            },
        ),
        TEXTLITERAL(
            Token {
                raw: "\"test space\"",
                position: Position {
                    column: 26,
                    line: 14,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 38,
                    line: 14,
                },
            },
        ),
        TEXTLITERAL(
            Token {
                raw: "\"multi\n\n    line\"",
                position: Position {
                    column: 40,
                    line: 14,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 9,
                    line: 16,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 10,
                    line: 16,
                },
            },
        ),
        IDENT(
            Token {
                raw: "nesting",
                position: Position {
                    column: 0,
                    line: 18,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 18,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 8,
                    line: 18,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 10,
                    line: 18,
                },
            },
        ),
        IDENT(
            Token {
                raw: "one",
                position: Position {
                    column: 12,
                    line: 18,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 15,
                    line: 18,
                },
            },
        ),
        IDENT(
            Token {
                raw: "fn",
                position: Position {
                    column: 16,
                    line: 18,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 18,
                    line: 18,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 19,
                    line: 18,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 21,
                    line: 18,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 23,
                    line: 18,
                },
            },
        ),
        MINUS(
            Token {
                raw: "-",
                position: Position {
                    column: 25,
                    line: 18,
                },
            },
        ),
        IDENT(
            Token {
                raw: "c",
                position: Position {
                    column: 27,
                    line: 18,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 28,
                    line: 18,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "123",
                position: Position {
                    column: 30,
                    line: 18,
                },
            },
        ),
        DOT(
            Token {
                raw: ".",
                position: Position {
                    column: 33,
                    line: 18,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "2",
                position: Position {
                    column: 34,
                    line: 18,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 35,
                    line: 18,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 36,
                    line: 18,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 37,
                    line: 18,
                },
            },
        ),
    ],
}
